src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__DBSync_Id__c</fullName>
        <description>DBSync Username</description>
        <inlineHelpText>DBSync UserName</inlineHelpText>
        <label>DBSync Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__DBSync_Profile__c</fullName>
        <description>DBSync Profile Name</description>
        <inlineHelpText>DBSync Profile Name</inlineHelpText>
        <label>DBSync Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__DBSync_Token__c</fullName>
        <description>DBSync Token</description>
        <inlineHelpText>DBSync Token</inlineHelpText>
        <label>DBSync Token</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBOE_Connection_Ticket__c</fullName>
        <defaultValue>&apos;trigger=false&apos;</defaultValue>
        <description>QuickBooks Online settings. &apos;trigger=true&apos; will activate automatic push to QBOE</description>
        <inlineHelpText>QuickBooks Online settings. &apos;trigger=true&apos; will activate automatic push to QBOE</inlineHelpText>
        <label>QBOE Settings</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBOE_DBSync_Server__c</fullName>
        <description>DBSync Server URL</description>
        <inlineHelpText>DBSync Server URL</inlineHelpText>
        <label>DBSync Server URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_SalesRep_ID__c</fullName>
        <label>QB SalesRep ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>